Fix setup.py requirements file handling robustly
- Modified setup.py to handle missing requirements files gracefully
- Enhanced requirements.notebooks.txt with proper notebook dependencies
- Added debugging to Dockerfile to verify file copying
- Created test_setup.py to verify requirements file reading
- This should resolve the FileNotFoundError during Docker build

--- a/requirements.notebooks.txt
+++ b/requirements.notebooks.txt
@@ -1,1 +1,5 @@
-bokeh==1.4.0
+# Jupyter notebook dependencies for TTS development and analysis
+bokeh>=2.0.0
+jupyter>=1.0.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
