Fix README.md Docker build issue - .dockerignore was excluding it
ROOT CAUSE: .dockerignore had '*.md' which excluded README.md from build context
✅ FIXED: Added '\!README.md' exception to include README.md while excluding other .md files
✅ ADDED: Debug verification in Dockerfile to confirm file copying
✅ ADDED: check_dockerignore.sh script to diagnose .dockerignore issues
✅ ADDED: test_docker_context.sh to verify build context contents

This resolves the 'COPY setup.py pyproject.toml MANIFEST.in README.md ./' failure.
README.md (17,429 bytes) exists and should now be included in Docker build context.

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,10 +5,12 @@
 .gitmodules
 
 # Documentation
-*.md
 docs/
 notebooks/
 images/
+# Allow README.md but exclude other markdown files
+*.md
+!README.md
 
 # Tests
 tests/
